Make sure to not get copyrighted

--- a/index.html
+++ b/index.html
@@ -163,7 +163,8 @@
         </div>
         <div class="copyright page-width">
           <p>Copyright 2045</p>
-          <p>Design and Coding by Me</p>
+          <p>Design and Coding by Me (of layout)</p>
+          <p>I do not own assets used in this nor do I claim them.</p>
         </div>
       </footer>
       <script src="https://kit.fontawesome.com/779cae142e.js" crossorigin="anonymous"></script>
